src/style.css
/* ... */
/* Main: To-Do-Form */
.form-div,
.edit-form-div {
  display: none;
  position: absolute;
  z-index: 10;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  overflow: scroll;
}

.form {
  display: flex;
  flex-direction: column;
  gap: 1.5ch;
  height: min-content;
  min-width: min-content;
  width: 50%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 5ch;
  padding: 5ch;
  background-color: var(--inactive-tab-color);
  border-radius: 3ch;
  outline: 1px solid black;
  outline-offset: -2ch;
}

.req-msg {
  font-family: "Happy Monkey";
  font-size: 2.8ch;
  text-align: center;
  margin-bottom: 1.5ch;
}

.form-line {
  display: flex;
  flex-wrap: wrap;
}

.category-name {
  margin-top: 1.5ch;
  font-size: 2.2ch;
  font-family: "Happy Monkey";
}

.instruct {
  display: flex;
  justify-content: end;
  margin-top: -1.4ch;
}

.title-msg::before {
  content: "Add a title.";
  /* color: var(--focusColor); */
  font-family: "Happy Monkey";
  font-size: 1.8ch;
}

.priority-msg::before {
  content: "Choose a priority level.";
  /* color: var(--focusColor); */
  font-family: "Happy Monkey";
  font-size: 1.8ch;
}

.description-msg::before {
  content: "Add details (optional).";
  /* color: var(--focusColor); */
  font-family: "Happy Monkey";
  font-size: 1.8ch;
}

.due-date-msg::before {
  content: "Select a date and time.";
  /* color: var(--focusColor); */
  font-family: "Happy Monkey";
  font-size: 1.8ch;
}

.btn-line,
.cat-btn-line {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 3ch;
  margin-top: 4ch;
}

.form-line > label,
.category-line > label,
.complete-container > label {
  display: inline-block;
  width: 15ch;
  font-family: "Happy Monkey";
  font-size: 2.15ch;
  margin-top: 1.5ch;
}

input[type="text"],
/* input[type="textarea"].description, */
input[type="datetime-local"],
.task-priority {
  display: inline-block;
  flex: 1;
  height: 3ch;
  width: 10%;
  padding-left: 1ch;
  font-family: "Happy Monkey";
  font-size: 1.9ch;
  background-color: var(--main-bground-color);
  border-radius: 1ch;
  border: 0.2ch solid var(--form-green-color);
  margin-top: 1.5ch;
}

textarea {
  flex: 1;
  /* height: 3ch;
  width: 10%; */
  padding-left: 1ch;
  font-family: "Happy Monkey";
  font-size: 1.9ch;
  background-color: var(--main-bground-color);
  border-radius: 1ch;
  border: 0.2ch solid var(--form-green-color);
  resize: vertical;
}

input[type="text"]:valid {
  background-color: var(--main-bground-color);
}

button.add-to-do,
button.edit-to-do,
button.add-category,
button.cancel-category,
button.cancel-to-do {
  font-family: "Happy Monkey";
  font-size: 1.8ch;
  width: 8ch;
  height: min-content;
  background-color: var(--main-bground-color);
  padding: 0.8ch;
  border-radius: 3ch;
  border: 1px solid var(--head-foot-color);
}

button.add-to-do:hover,
button.edit-to-do:hover,
button.add-category:hover,
button.cancel-category:hover,
button.cancel-to-do:hover {
  background-color: var(--form-green-color);
  cursor: pointer;
}

/* Main: Tab Content */

.tab-content {
  display: none;
  grid-area: 1 / 2 / 2 / 3;
  font-family: "Happy Monkey";
  margin-top: 2ch;
  margin-left: 2ch;
  width: 100%;
  height: 100%;
}

.tab-content--active {
  display: initial;
  grid-area: 1 / 2 / 2 / 3;
  font-family: "Happy Monkey";
  margin-top: 2ch;
  margin-left: 2ch;
  width: 100%;
  height: 100%;
}

/* Main: Category View */

/* Category View: New Category Form */

.cat-form-container {
  display: none;
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  right: 0;
}

.category-form {
  display: flex;
  flex-direction: column;
  margin: auto;
  background-color: var(--head-foot-color);
  height: min-content;
  width: 50ch;
  padding: 1.5ch;
  border-radius: 1ch;
}

input[type="text"].category {
  margin-left: -5ch;
  width: 70%;
}

.cat-btn-line {
  margin-top: 2ch;
}

/* Category View: New Category Section */
.cat-section {
  width: 100%;
  min-height: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 4ch;
}

.cat-card {
  font-family: "Lancelot";
  font-size: 2ch;
  background-color: var(--inactive-tab-color);
  width: 30ch;
  height: min-content;
  display: flex;
  flex-direction: column;
  gap: 3ch;
  align-items: center;
  padding: 1ch;
  border-radius: 1ch;
  margin-bottom: 2ch;
}

.cat-content {
  width: 100%;
  height: 100%;
  text-align: center;
}

.new-to-do {
  font-family: "Happy Monkey";
  font-size: 2ch;
  width: 10ch;
  height: 3ch;
  border: 1px solid var(--form-green-color);
  border-radius: 2ch;
  background-color: var(--head-foot-color);
  cursor: pointer;
}

.new-to-do:hover {
  background-color: var(--main-bground-color);
}

.cat-card .delete-icon {
  display: flex;
  width: 100%;
  height: min-content;
  justify-content: flex-end;
  margin-right: 1ch;
  margin-bottom: 0.5ch;
}

.cat-card .delete-icon > img {
  width: 2ch;
}

.cat-card .delete-icon > img:hover {
  width: 2.2ch;
  cursor: pointer;
}

/* Category Section: New To Do Item */

.to-do-entry {
  margin: 1ch 0 1ch 0;
  background-color: var(--to-do-entry-color);
  border-radius: 1ch;
  padding: 1ch 0 1ch 0;
}

.to-do-entry .title {
  text-decoration: underline;
  font-size: 2.6ch;
  padding-bottom: 1ch;
}

.details-title,
.due-title {
  width: 100%;
  text-align: left;
  font-size: 2.5ch;
  margin-left: 1.5ch;
}

.details,
.show-due-date {
  padding-bottom: 1ch;
  font-size: 1.9ch;
  font-family: "Happy Monkey";
}

.to-do-entry > label {
  width: 10ch;
  margin-bottom: 1ch;
}

.complete-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.7ch;
}

input[type="checkbox"].complete {
  align-self: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  -o-appearance: none;
  appearance: none;
  height: 2.5ch;
  width: 2.5ch;
  border: 1px solid var(--form-green-color);
  border-radius: 1ch;
  outline: none;
  background-color: var(--main-bground-color);
  cursor: pointer;
  position: relative;
}
/* ... */

